buildscript {
    repositories {
        mavenCentral()
		maven {
		  url "https://plugins.gradle.org/m2/"
		}
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:3.5.7")
        classpath "com.github.jk1:gradle-license-report:2.1"
        classpath 'org.owasp:dependency-check-gradle:7.3.0'
    }
}


apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: "project-report"
apply plugin: "com.github.jk1.dependency-license-report"
apply plugin: 'org.owasp.dependencycheck'

bootJar {
    archiveBaseName = 'SpringPdfCreator'
    archiveVersion = '0.1.0'
}

repositories {
    mavenCentral()
}

sourceCompatibility = 11
targetCompatibility = 11

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation group: 'com.lmax', name: 'disruptor', version:'3.4.4'
    
    compileOnly("org.springframework.boot:spring-boot-devtools")  
    implementation("org.springframework.boot:spring-boot-starter-security")
	  implementation("org.springframework.boot:spring-boot-starter-web:3.5.7")
	  implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.5.7'
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.5.7")
    implementation("org.springframework.boot:spring-boot-starter-data-rest:3.5.7")

    implementation("com.h2database:h2:2.1.214")
    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'
    implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '12.2.0.jre8'
    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '4.0.1'
    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '4.0.1'
    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
    implementation group: 'org.apache.tomcat', name: 'tomcat-dbcp', version: '10.1.10'
    implementation("org.springframework.boot:spring-boot-starter-websocket:3.5.7")
    implementation("org.webjars:webjars-locator-core")
    implementation("org.webjars:sockjs-client:1.5.1")
    implementation("org.webjars:stomp-websocket:2.3.4")
    implementation("org.webjars:bootstrap:5.2.2")
    implementation("org.webjars:jquery:3.6.1")
    testImplementation('org.springframework.boot:spring-boot-starter-test:2.7.4') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
    implementation("org.springframework.boot:spring-boot-starter-activemq:3.5.7")
    implementation 'com.itextpdf:itext7-core:7.2.3'
    implementation 'com.itextpdf:kernel:7.2.5'
    implementation 'com.itextpdf:io:7.2.3'
    implementation 'com.itextpdf:layout:7.2.3'
    implementation 'com.itextpdf:forms:7.2.3'
    implementation 'com.itextpdf:pdfa:7.2.5'
    implementation 'com.itextpdf:sign:7.2.3'
    implementation 'com.itextpdf:barcodes:7.2.3'
    implementation 'com.itextpdf:font-asian:7.2.5'
    implementation 'com.itextpdf:hyph:7.2.3'
    implementation group: 'com.itextpdf', name: 'html2pdf', version: '4.0.3'
}
configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}
test {
	useJUnitPlatform()
}

